# nyc-cheap-eats-final

./: .env  Dockerfile  README.md  app.py  pyproject.toml
evals/: conftest.py  test_golden.py  test_rubric.py  test_rules.py
static/: index.html
